new featured music + rss updated

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -104,7 +104,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
-   <p><b>19.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#3">imaginal disk</a></p>
+   <p><b>19.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#3">imaginal disk</a> + new featured song and album</p>
    <p><b>05.oct.24</b> - debuting fall's listening log with tripleS' <a href="listening-log/2024/fall.html#2">assemble24</a></p>
    <p><b>21.sep.24</b> - music page revamp!</p>
    <p><b>02.sep.24</b> - new listening log: <i>TTYL</i></p>
@@ -120,14 +120,14 @@
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
-    <h4><b>ナイトホリック</b> - UROMT</h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFLW396UztQ?si=4l8mjEgXavcZHkBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>i actually checked this anime out because of its banger opening by a japanese duo called UROMT but like. it just wasn't what i expected it to be <img src="/!g/pix/skull.gif" alt="skull emoji"> either way, this is still super catchy to me and i've been listening to it so much lately.</p>
+    <h4><b>upward movement (dave owns)</b></h4>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hJ0LKX2tF5M?si=HEETSrG7pspx1beU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>SICK of pretending like this song isn't straight up FIRE. i'm not afraid to admit that homestuck has some bangers up its sleeve but this one is possibly my favorite one. i love the midi strings or whatever that's called. and the little change up during the 2nd half of this song is just so fucking great too.</p>
    </div>
    <div class="lp">
-    <h4><b>sunsound collisions</b> - 2mello</h4>
-    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2043909309/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://2mellomakes.bandcamp.com/album/sunsound-collisions">Sunsound Collisions by 2 Mello</a></iframe>
-    <p>very nice lo-fi type beat collection of songs by an artist i really like! i'm usually playing this in the bg while doing something else. either way, despite it Just being a collection of sounds, i still find it very worthwhile to listen to. my favorite song from this album is <i>speak with you</i></p>
+    <h4><b>imaginal disk</b> - magdalena bay</h4>
+    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1709829577/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://magdalenabay.bandcamp.com/album/imaginal-disk">Imaginal Disk by Magdalena Bay</a></iframe>
+    <p>i can't stop listening to this, this is so magical! my favorite songs are <i>death & romance</i>, <i>vampire in the corner</i>, <i>fear, sex</i>. <a href="/music/listening-log/2024/fall.html#3" target="_parent">listening log</a></p>
    </div>
    <hr>
 
