--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -45,7 +45,6 @@
 	table {
 		width: 100%;
 	}
-
 </style>
 
 <body>
@@ -64,17 +63,37 @@ iframe2
 </details>
 -->
 
-<details open><summary>
-	<span class="date">30.aug.24 - ? : ナイトホリック / sunsound collisions</span>
-	</summary>
-	<table><td class="t-left">
-		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFLW396UztQ?si=4l8mjEgXavcZHkBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<p>i actually checked this anime out because of its banger opening by a japanese duo called UROMT but like. it just wasn't what i expected it to be <img src="/!g/pix/skull.gif"alt="skull emoji"> either way, this is still super catchy to me and i've been listening to it so much lately.</p>
-	</td><td class="t-right">
-		<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2043909309/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://2mellomakes.bandcamp.com/album/sunsound-collisions">Sunsound Collisions by 2 Mello</a></iframe>
-	<p>very nice lo-fi type beat collection of songs by an artist i really like! i'm usually playing this in the bg while doing something else. either way, despite it Just being a collection of sounds, i still find it very worthwhile to listen to. my favorite song from this album is <i>speak with you</i>!</p>
-	</td></table>
-	</details>
+		<details open>
+			<summary>
+				<span class="date">19.oct.24 - ? : upward movement (dave owns) / imaginal disk</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hJ0LKX2tF5M?si=HEETSrG7pspx1beU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					SICK of pretending like this song isn't straight up FIRE. i'm not afraid to admit that homestuck has some bangers up its sleeve but this one is possibly my favorite one. i love the midi strings or whatever that's called. and the little change up during the 2nd half of this song is just so fucking great too.
+				</td>
+				<td class="t-right">
+					<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1709829577/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://magdalenabay.bandcamp.com/album/imaginal-disk">Imaginal Disk by Magdalena Bay</a></iframe>
+					i can't stop listening to this, this is so magical! <a href="/music/listening-log/2024/fall.html#3" target="_parent">listening log</a>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">30.aug.24 - 19.oct.24 : ナイトホリック / sunsound collisions</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFLW396UztQ?si=4l8mjEgXavcZHkBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>i actually checked this anime out because of its banger opening by a japanese duo called UROMT but like. it just wasn't what i expected it to be <img src="/!g/pix/skull.gif" alt="skull emoji"> either way, this is still super catchy to me and i've been listening to it so much lately.</p>
+				</td>
+				<td class="t-right">
+					<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2043909309/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://2mellomakes.bandcamp.com/album/sunsound-collisions">Sunsound Collisions by 2 Mello</a></iframe>
+					<p>very nice lo-fi type beat collection of songs by an artist i really like! i'm usually playing this in the bg while doing something else. either way, despite it Just being a collection of sounds, i still find it very worthwhile to listen to. my favorite song from this album is <i>speak with you</i>!</p>
+				</td>
+			</table>
+		</details>
 
 		<details>
 			<summary>
