--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -178,6 +178,7 @@
 			<a title="galissia" href="https://galissia.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
 			<a title="raezroom" href="https://raezroom.neocities.org/" target="_blank"><img src="!g/raezroom.gif" alt="raezroom"></a>
 			<a href="https://midnightsolarium.neocities.org/" target="_blank"><img src="!g/midnightsolarium.gif" alt="midnightsolarium"></a>
+			<a href="https://scftst4rs.neocities.org" target="_blank"><img src="!g/scftst4rs.gif" alt="scftst4rs"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
