--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -182,8 +182,8 @@ don't take this code for your template cus it might be outdated or missing comme
 		}
 
 		/* selected TAB effect */
-		.tab button:focus,
-		.tab2 button:focus {
+		.tab button.active,
+		.tab2 button.active {
 			top: 0px;
 			cursor: -webkit-grabbing;
 			cursor: grabbing;
@@ -217,7 +217,6 @@ don't take this code for your template cus it might be outdated or missing comme
 			border-radius: 10px;
 			background: transparent;
 		}
-
 	</style>
 </head>
 
@@ -398,13 +397,18 @@ don't take this code for your template cus it might be outdated or missing comme
 	<script>
 		function openTab(tabName) {
 			var i;
-			var tabcontent = document.getElementById(tabName);
+			var tab = document.getElementById(tabName);
 			var otherContent = document.getElementsByClassName("tabcontent");
 			var defaultOpen = document.getElementById("defaultOpen");
+			var buttons = document.getElementsByClassName("tablinks");
 			for (i = 0; i < otherContent.length; i++) {
 				otherContent[i].style.display = "none";
 			}
-			tabcontent.style.display = "block";
+			for (i = 0; i < buttons.length; i++) {
+				buttons[i].classList.remove("active");
+			}
+			tab.style.display = "block";
+			event.currentTarget.className += " active";
 		}
 		document.getElementById("defaultOpen").click();
 
