updated community JS code + updated recently

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -124,10 +124,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/pikmin-4/index.html">pikmin 4</a> + <a href="/vgs/splatoon-2/index.html">splatoon 2</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> orange is the new black + ozumaki + dandadan</p>
+			<p><span class="hl">watching:</span> orange is the new black + dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> studying for midterms</p>
-			<p class="date">last updated on 16.oct.24</p>
+			<p class="date">last updated on 22.oct.24</p>
 
 		</div>
 
@@ -163,12 +163,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="comm" class="box">
 			<h2>community</h2>
-			<button id="default-button" onclick="toggleComm('webring')">webrings</button>
-			<button onclick="toggleComm('listing')">listings</button>
-			<button onclick="toggleComm('pixel')">pixel</button>
-			<button onclick="toggleComm('misc')">misc</button>
+			<button class="comm-b" onclick="toggleComm('webring')">webrings</button>
+			<button id="default" class="comm-b" onclick="toggleComm('listing')">listings</button>
+			<button class="comm-b" onclick="toggleComm('pixel')">pixel</button>
+			<button class="comm-b" onclick="toggleComm('misc')">misc</button>
 			<div id="webring" class="comm-box">
-
 				<!--			no AI webring-->
 				<map name="noaimini2">
 					<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
