--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -104,6 +104,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>22.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#4">crystal castles</a> + <a href="listening-log/2024/fall.html#5">MG ultra</a></p>
    <p><b>19.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#3">imaginal disk</a> + new featured song and album</p>
    <p><b>05.oct.24</b> - debuting fall's listening log with tripleS' <a href="listening-log/2024/fall.html#2">assemble24</a></p>
    <p><b>21.sep.24</b> - music page revamp!</p>
