new journal log

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -50,6 +50,7 @@ v3 of journal started on 05.jul.24
 				<h3>logs navigation</h3>
 				<details>
 					<summary>2024</summary>
+					<a href="2023/10.html" target="log">october</a>
 					<a href="2024/09.html" target="log">september</a>
 					<a href="2024/08.html" target="log">august</a>
 					<a href="2024/07.html" target="log">july</a>
@@ -85,7 +86,7 @@ v3 of journal started on 05.jul.24
 			</div>
 		</aside>
 
-		<iframe id="mainframe" name="log" src="2024/09.html"></iframe>
+		<iframe id="mainframe" name="log" src="2024/10.html"></iframe>
 
 	</div>
 	<footer>
