--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,10 +35,13 @@
 				<p><b></b> </p>
 			</article> -->
 			<article>
+				<p><b>25.oct.24 - 10pm</b> recently bought some wireless headphones so i could upgrade from the $8 earbuds that i use on a daily basis and i am so obsessed with them!!! i got a <i>JBL tune 720bt</i> and i honestly recommend them if you want some quality and comfy bluetooth headphones. the color is my absolute favorite and i also adore that it comes with an aux cord so you can still use it with things that don't have bluetooth. <button onclick="showPic('!g/241025-box.png','box of the headphones', 'also the battery on these are crazy good...')">box.png</button> <button onclick="showPic('!g/241025-aux.png', 'headphones and 3DS','headphones connected to the aux cord so i can listen to the HD sounds of my 3DS')">aux.png</button> <button onclick="showPic('!g/241025-on-me-head.png', 'my face with the headphones on', 'i think i look so cute with them on. i really like that they arent insanely big but are comfortable enough for my ears.')">on-me-head.png</button></p>
+			</article>
+			<article>
 				<p><b>18.oct.24 - 1pm</b> it makes me feel like a genius whenever i use whatever i've learned for python in my compsci class and apply it to my site's javascript.</p>
 			</article>
 			<article>
-				<p><b>09.oct.24 - 11am</b> still waiting for <i>look back</i> to get screenings in my theater... but other than that, i've been doing just fine! not much happening atm. i've been working on my fashion page and i love how it's looking so far! here's a sneak peek <button onclick="showPic('!g/241009-fashion.jpg','fashion page preview', 'need to take pics of my fav items and accesories')">241009-fashion.jpg</button></p>
+				<p><b>09.oct.24 - 11am</b> still waiting for <i>look back</i> to get screenings in my theater... but other than that, i've been doing just fine! not much happening atm. i've been working on my fashion page and i love how it's looking so far! here's a sneak peek <button onclick="showPic('!g/241009-fashion.jpg','fashion page preview', 'need to take pics of my fav items and accesories')">fashion.jpg</button></p>
 			</article>
 			<article id="240914">
 				<p><b>14.sep.24 - 1am</b> if <i>look back</i> won't be screening in my country, i think i will kill myself.</p>
