--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -22,7 +22,7 @@
 			<center>
 				<h1>templates</h1>
 			</center>
-		<p>F2U layouts and templates coded by me for you to use on your website! <a href="https://github.com/doqmeat/HTML-templates" target="_blank">github repository</a></p>
+		<p>F2U layouts and templates coded by me for you to use on your website! <a href="https://github.com/doqmeat/HTML-templates" target="_blank">github repository</a> / <a title="i host the zip folders with the files here!" href="https://ko-fi.com/doqmeat/shop/htmltemplates" target="_blank">ko-fi shop</a>
 
 		<h2>rules</h2>
 
