--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,6 +35,9 @@
 				<p><b></b> </p>
 			</article> -->
 			<article>
+				<p><b>27.oct.24 - 1pm</b> i need to keep drawing</p>
+			</article>
+			<article>
 				<p><b>25.oct.24 - 10pm</b> recently bought some wireless headphones so i could upgrade from the $8 earbuds that i use on a daily basis and i am so obsessed with them!!! i got a <i>JBL tune 720bt</i> and i honestly recommend them if you want some quality and comfy bluetooth headphones. the color is my absolute favorite and i also adore that it comes with an aux cord so you can still use it with things that don't have bluetooth. <button onclick="showPic('!g/241025-box.png','box of the headphones', 'also the battery on these are crazy good...')">box.png</button> <button onclick="showPic('!g/241025-aux.png', 'headphones and 3DS','headphones connected to the aux cord so i can listen to the HD sounds of my 3DS')">aux.png</button> <button onclick="showPic('!g/241025-on-me-head.png', 'my face with the headphones on', 'i think i look so cute with them on. i really like that they arent insanely big but are comfortable enough for my ears.')">on-me-head.png</button></p>
 			</article>
 			<article>
