--- a/doqmeat/vgs/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/style-savvy-styling-star/index.html
@@ -46,6 +46,15 @@
 		<div class="info"><b>genre/type: </b> fashion, simulator</div>
 
 		<h3>logs</h3>
+		<p><span class="date">27.oct.24</span> been playing this on and off and my verdict? i fear that it is just okay <img src="/!g/pix/emote1crying.gif" alt=""> like don't get me wrong, there are SOOO many improvements from <a href="../style-savvy-trendsetters/">trendsetters</a> to this that i appreciate. like being able to tell a customer that you don't have exactly what they want but to wait for you while you restock. but... i don't know this game doesn't exactly click for me like <i>trendsetters</i> did. i'm not sure how many hows i'm into this game but hopefully in the future i can give a clearer answer as to why.</p>
+		<center><img src="241027 (1).JPG" width="48%">
+			<img src="241027 (2).JPG" width="48%">
+		</center>
+		<p>on another note, i do think that something this game does wonderfully is having more "lively" characters. i am a bit invested in what is going on with them. and some of them are even funny!</p>
+		<center><img src="bread.bmp" alt="" style="max-width: 100%;">
+			<img src="moo.bmp" alt="" style="max-width: 100%;">
+		</center>
+		<hr>
 		<p><span class="date">03.sep.24</span> started playing this right when i finished playing <a href="../style-savvy-trendsetters/index.html">trendsetters</a>. i asked on my private twitter if i should play <i>styling star</i> or <i>fashion forward</i> next and my only oomf who has played the style savvy games voted for <i>styling star</i> so!!! here i am.</p>
 		<p>first thing i noticed about the game is that there is no 3D option <small>unless my game is bugged but? i don't think that's it.</small> and taking a look at the release date being in 2017 then yeah that makes a LOT of sense, since i know nintendo was barely pushing the 3D gimmick of the 3DS at that time. i don't think i've made it pass the tutorial of the game, but once i have a few more minutes with the game i'll come back to this to write some more of my thoughts.</p>
 	</main>
