--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -53,6 +53,7 @@
 		<h2>change log</h2>
 
 		<div id="log">
+			<li>27.oct.24: log: <a href="style-savvy-styling-star/">style savvy styling star</a></li>
 			<li>13.oct.24: log: <a href="splatoon-2/index.html">splatoon 2</a> + <a href="pikmin-4/index.html">pikmin 4</a></li>
 			<li>02.oct.24: log: <a href="fortnite/index.html">fortnite</a> + <a href="splatoon-2/index.html">splatoon 2</a></li>
 			<li>07.sep.24: log: <a href="cato/index.html">cato</a></li>
