updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -280,7 +280,10 @@
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
-		<p><a href="https://neustadt.fr/" target="_blank">neustadt.fr</a> / <a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a> / <a href="https://kiyuyu.nekoweb.org/" target="_blank">kiyuyu</a>
+		<p><a href="https://neustadt.fr/" target="_blank">neustadt.fr</a> /
+			<a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a> /
+			<a href="https://kiyuyu.nekoweb.org/" target="_blank">kiyuyu</a> /
+			<a title="web art... i love their stuff!!" href="https://chia.design" target="_blank">chia.design</a>
 		</p>
 
 		<h4 id="art">art / music</h4>
@@ -343,6 +346,7 @@
 			<a href="https://pomelo.lol/pixel/home" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
 			<a title="F2U icons n pixels" href="http://www.nagai.net/icon-kan/index.html" target="_blank"><img src="!g/nagai-net.gif" alt="nagai"></a>
 			<a title="pixels for adoptions" href="https://mooncandy.toys/" target="_blank"><img src="!g/mooncandy.gif"></a>
+			<a href="https://loveberry.nekoweb.org/" target="_blank"><img src="!g/loveberry.gif" alt="loveberry"></a>
 		</div>
 
 		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
