--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,6 +35,9 @@
 				<p><b></b> </p>
 			</article> -->
 			<article>
+				<p><b>27.oct.24 - 10pm</b> okay i drew for a little bit but the entire time i kept feeling like it was a waste of my time... sign... maybe i gotta try other methods of drawing</p>
+			</article>
+			<article>
 				<p><b>27.oct.24 - 1pm</b> i need to keep drawing</p>
 			</article>
 			<article>
