--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -75,24 +75,32 @@ v3 of journal started on 05.jul.24
 				</details>
 			</div>
 
+			<div>
+				<h3>notes</h3>
+				<li>journal running on version 3 since 06.jul.24</li>
+				<li>i often don't proof read what i write in these</li>
+				<p><b>more of my nonsense and writings:</b> <a href="/blog">blog</a> / <a href="/microblog">microblog</a> / <a title="food log!" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink">moku.blog</a></p>
+			</div>
+
 			<div id="quote">
 				<p>a chocolate sepia record that is important to me and no one else <br><b> - <a href="https://vocaloidlyrics.fandom.com/wiki/999/Powapowa-P" title="translation credit!">999</a> (siinamota)</b>
 				</p>
 			</div>
 
-			<div id="pic">
+			<div>
 				<h3>credit</h3>
 				<p>pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, body bg from <a href="https://unsplash.com/photos/green-grass-field-during-daytime-cPaGBl8R_1M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">unsplash</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
+			</div>
+
+			<div id="footer">
+				<h3>footer</h3>
+				<p><a href="#">go to the top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 			</div>
 		</aside>
 
 		<iframe id="mainframe" name="log" src="2024/10.html"></iframe>
 
 	</div>
-	<footer>
-		<p><img src="/!g/pix/butterfly5.gif"> journal running on version 3 since 06.jul.24 <img src="/!g/pix/butterfly5.gif"></p>
-		<p><a href="#">top</a> - <a href="/">home</a> - <a title="food log!" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink">moku.blog</a> - <a href="/blog">blog</a> - <a href="/microblog">microblog</a> - <a href="/sitemap">sitemap</a></p>
-	</footer>
 
 	<!-- <div id="sticker"><a href="#" title="scroll to the top!"><img src="!g/pic.gif"></a></div>
 
