some minor changes to the notebook

--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -166,6 +166,8 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol</p>
 					<li><a href="F2U/codes.html" target="iframe_d">templates</a></li>
 					<ul>
+						↳ <a href="F2U/codes.html#yukika" target="iframe_d">yukika passport</a> <img src="/!g/pix/new1.gif">
+						<br>
 						↳ <a href="F2U/codes.html#notebook" target="iframe_d">notebook</a>
 					</ul>
 					<li><a href="F2U/materials.html" target="iframe_d">site materials</a></li>
@@ -174,7 +176,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						<br>
 						↳ <a href="F2U/materials.html#pix" target="iframe_d">pixels</a>
 						<br>
-						↳ <a href="F2U/materials.html#cur" target="iframe_d">cursors</a> <img src="/!g/pix/new1.gif">
+						↳ <a href="F2U/materials.html#cur" target="iframe_d">cursors</a>
 					</ul>
 
 					<li><a href="F2U/stamps.html" target="iframe_d">stamps</a></li>
