changes to projects + added some logs

--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -31,17 +31,13 @@
 				</ul>
 				<li><a href="/notebook/tutorials/index.html">tutorials and guides</a></li>
 				<li><a href="/notebook/F2U/codes.html">HTML templates</a> - templates i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small></li>
-				<ul>
-					<li><b>notebook</b> - <a href="/notebook/F2U/preview/notebook" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a></li>
-					<li><b>yukika passport</b> - <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/yukika" target="_blank">github code</a> / <a href="https://download-directory.github.io/?url=https%3A%2F%2Fgithub.com%2Fdoqmeat%2FHTML-templates%2Ftree%2Fmain%2Fyukika" target="_blank">download</a></li>
-				</ul>
 			</ul>
 
-			<h2>learning zone</h2>
-			<p>i will also have in here some pages relating to things i'm learning or for reference.</p>
+			<h2>learning in public</h2>
+			<p>i will also have in here some pages relating to things i'm learning. <a href="https://www.swyx.io/learn-in-public" target="_blank" class="outlink">insp</a></p>
 			<ul>
-				<li><a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS.</li>
-				<li><s>learning python</s> - soon maybe.</li>
+				<li><a href="javascript/index.html">learning javascript</a></li>
+				<li><a href="python/index.html">learning python</a></li>
 				<li><a href="bash/index.html">bash reference sheet</a> - when im a little stupid for the git bash manuals so i have to make my own reference sheet.</li>
 			</ul>
 		</main>
