--- a/doqmeat/projects/javascript/index.html
+++ b/doqmeat/projects/javascript/index.html
@@ -12,13 +12,6 @@
 	<script src="/!f/tooltip.js"></script>
 	<title>i'm learning JS</title>
 	<style>
-		textarea {
-			display: inline-block;
-			width: 70%;
-			height: 100%;
-			font-family: consolas;
-		}
-
 		nav {
 			text-align: left;
 		}
@@ -33,9 +26,12 @@
 		<h2>navigation</h2>
 		<nav>
 			<ul>
+				<li><a href="practice.html">thoughts n cheatsheet</a> - where i put what i've learned.</li>
 				<li><a href="smarter-way/index.html">a smarter way to learn JS</a> - taking notes as i read through it.</li>
 				<li><a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG</li>
-				<li><a href="practice.html">practice page</a> - where i put what i've learned into practice.</li>
+			</ul>
+			<h3>links</h3>
+			<ul>
 				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript" class="outlink" target="_blank">mozilla's learn JS</a></li>
 			</ul>
 		</nav>
