made a FAQ page

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -64,6 +64,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/projects">projects</a>
 			<a href="/masaaki-yuasa">masaaki yuasa watchlist</a>
 			<a href="safe-spot/index.html">safe spot</a>
+			<a href="/faq">FAQ <img src="!g/pix/new1.gif" alt=""></a>
 
 			<h3 class="site"> sitely</h3>
 			<a href="/sites">button wall</a>
@@ -122,11 +123,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/pikmin-4/index.html">pikmin 4</a> + <a href="/vgs/splatoon-2/index.html">splatoon 2</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/pikmin-4/index.html">pikmin 4</a> + <a href="/vgs/style-savvy-styling-star/index.html">style savvy styling star</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> orange is the new black + dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> studying for midterms</p>
+			<p><span class="hl">working on:</span> getting rid of this cold</p>
 			<p class="date">last updated on 22.oct.24</p>
 
 		</div>
