--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -180,6 +180,7 @@
 			<a href="https://midnightsolarium.neocities.org/" target="_blank"><img src="!g/midnightsolarium.gif" alt="midnightsolarium"></a>
 			<a href="https://scftst4rs.neocities.org" target="_blank"><img src="!g/scftst4rs.gif" alt="scftst4rs"></a>
 			<a href="https://firozah.com/" target="_blank"><img src="!g/firozah.gif" alt="firozah"></a>
+			<a href="https://boypussy.neocities.org"><img src="!g/boypussy.gif" alt=""></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
