--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,6 +35,9 @@
 				<p><b></b> </p>
 			</article> -->
 			<article>
+				<p><b>30.oct.24 - 12am</b> woke up today to a laggy af laptop and when i restart it i get an error that my FANS are not working properly...... <img src="/!g/pix/emote1scared.gif" alt=""> opened my laptop up, 1 out of the 2 fans was so so so dusty... i cleaned it up, plug it out and in but it doesn't spin while the other one does. ordered some replacement fans which i hope will fix the fans issue. and i also found out that my laptop was being super slow because the CPU was capping itself at 0.20 ghz... i'm guessing it somehow knows theres an issue with the fans and it's capping itself on purpose so it doesn't get cooked. the weird thing is that my laptop has been WAYYY hotter before and the CPU has never capped itself. but i guess this is a bit different? this laptop was pretty expensive ($1k, for my standards) and its about to be 3 years old next march so i feel like if it kicks the bucket this early, i might actually sob <img src="/!g/pix/emote1crying.gif" alt=""> i have an external mini fan blowing cool air to the back of the laptop and the CPU hasn't capped itself yet. so at least i know <b>it is</b> related to the fans.</p>
+			</article>
+			<article>
 				<p><b>27.oct.24 - 10pm</b> okay i drew for a little bit but the entire time i kept feeling like it was a waste of my time... sign... maybe i gotta try other methods of drawing</p>
 			</article>
 			<article>
