changed gaming log bg color

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -50,7 +50,7 @@
 		<p>spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
-		<h2>change log</h2>
+		<h2>changelog</h2>
 
 		<div id="log">
 			<li>27.oct.24: log: <a href="style-savvy-styling-star/">style savvy styling star</a></li>
@@ -64,9 +64,8 @@
 		</div>
 
 		<h2>pages / links</h2>
-		<p><s>consoles</s> - wip</p>
-		<p><s>video games spreadsheet</s> - wip</p>
-		<p>feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank">steam</a> but do leave me a message as to who you are!</p>
+		<p><a title="a more comprehensive log of eveything i've ever played" href="https://docs.google.com/spreadsheets/d/1ojh_cduLjpozKTJ1udhq9QNX5xlpGwMe2fLLkxaB4C4/edit?usp=sharing" class="outlink" target="_blank">video games spreadsheet</a></p>
+		<p>feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a> but do leave me a message as to who you are!</p>
 
 
 		<h3>credit</h3>
