--- a/doqmeat/projects/python/index.html
+++ b/doqmeat/projects/python/index.html
@@ -29,7 +29,7 @@
 <body>
   <h1>i'm learning python</h1>
   <main>
-    <nav></nav>
+    <nav><a href="#links">links</a> / <a href="#thoughts">thoughts</a> / <a href="#sheet">cheatsheet</a></nav>
     <h2 id="links">links</h2>
     <ul>
       <li><a href="https://www.python.org/" target="_blank">python docs</a></li>
@@ -45,18 +45,18 @@
 ... else:
 ... pos = pos + 1
 ... return found</textarea>
-    <p>and i was like wait a minute.... this is kinda doing that thing i do in JS with <code>i = 0; i < THING.length; i++</code> and i found that very very cool.</p>
+    <p>and i was like wait a minute.... this is kinda doing that thing i do in JS with <code>i = 0; i &lt; THING.length; i++</code> and i found that very very cool.</p>
 
-    <h2>cheatsheet</h2>
+    <h2 id="sheet">cheatsheet</h2>
     <ul>
-      <li><code>len()</code> returns the lenght of a list</li>
+      <li><code>len()</code> returns the length of a list</li>
     </ul>
   </main>
 
   <footer>
     ....... ᓚᘏᗢ .......
     <br>
-    last updated on <b>28.oct.24</b>
+    last updated on <b>30.oct.24</b>
     <br>
     <a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
   </footer>
