--- a/doqmeat/projects/javascript/practice.html
+++ b/doqmeat/projects/javascript/practice.html
@@ -31,7 +31,7 @@
 <body>
 	<h1>i'm learning JS</h1>
 	<main>
-		<nav></nav>
+		<nav><a href="#thoughts">thoughts</a> / <a href="#sheet">cheatsheet</a></nav>
 		<h2 id="thoughts">thoughts</h2>
 		<p>learned how to remove classes and add them with an event like so:</p>
 		<textarea style="height:90px"> for (i = 0; i < buttons.length; i++) {
