--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,7 +34,7 @@
 			<!-- <article>
 				<p><b></b> </p>
 			</article> -->
-			<article>
+			<article id="241030-5pm">
 				<p><b>30.oct.24 - 5pm</b> there was a comic book fair at my uni and lots of artists had tables so i kind of did a bit of a haul! links to artists: <a href=="https://skullcrabs.com/" target="_blank">skullcrabs</a>, <a href="https://pyoint.carrd.co/" target="_blank">pyoint</a>, <a href="https://camillereck.com" target="_blank">camille reck</a> <small>i'm missing two artists but i forgot to get their socials SORRY...</small> <br><button onclick="showPic('!g/241030-angel.jpg','keychain of angel from csm','ANGEL MEOW MEOW.... hes one of my fav characters of chainsaw man. artist: skullcrabs')">angel.jpg</button> <button onclick="showPic('!g/241030-power.jpg','enamel pin of power','ANOTHER MEOW MEOW from chainsaw man... ')">power.jpg</button> <button onclick="showPic('!g/241030-totebag.jpg','orange kitty totebag','i fell so in love with this tote bag oh my goddddd i love the colors so much. artist: pyoint')">totebag.jpg</button> <button onclick="showPic('!g/241030-puter.jpg','keychain of a computer','puter...')">puter.jpg</button> <button onclick="showPic('!g/241030-earrings.jpg','handmade cat earrings','i love silly earrings a lot so i had to get these! artist: camille reck')">earrings.jpg</button></p>
 
 			</article>
