added a new sticker

--- a/doqmeat/vgs/sticky-business/index.html
+++ b/doqmeat/vgs/sticky-business/index.html
@@ -11,8 +11,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
 	<script>
-		(function($) {
-			$(document).ready(function() {
+		(function ($) {
+			$(document).ready(function () {
 				$("[title]").style_my_tooltips({
 					tip_follows_cursor: true,
 					tip_delay_time: 10,
@@ -42,17 +42,18 @@
 		<p>below i will be sharing some stickers i've made throughout my gameplay</p>
 		<hr>
 
-		<h3>screenshots</h3>
+		<h3>stickers</h3>
 		<center>
-			<img title="aliens" src="aliens.png" width="70%">
-			<img title="cat sleeping on a muchroom! i love cats and mushrooms" src="catmushroom.png" width="80%">
-			<img title="cat plant sticker bundle" src="catplant.png" width="100%">
-			<img title="made a sticker for my bf!" src="hum.png" width="100%">
-			<img title="another cat mushroom related sticker" src="mushroom.png" width="80%">
-			<img title="WE ARE THE RATS!" src="ratking.png" width="80%">
-			<img title="sticker made for a friend!" src="v.png" width="100%">
-			<img src="sweets.png" width="50%">
-			<img title="i would give this one free with every purchase!" src="shop.png" width="60%">
+			<img src="queer.png" alt="green skeleton" width="48%">
+			<img title="aliens" src="aliens.png" width="48%">
+			<img title="cat sleeping on a muchroom! i love cats and mushrooms" src="catmushroom.png" width="48%">
+			<img title="cat plant sticker bundle" src="catplant.png" width="48%">
+			<img title="made a sticker for my bf!" src="hum.png" width="48%">
+			<img title="another cat mushroom related sticker" src="mushroom.png" width="48%">
+			<img title="WE ARE THE RATS!" src="ratking.png" width="48%">
+			<img title="sticker made for a friend!" src="v.png" width="48%">
+			<img src="sweets.png" width="48%">
+			<img title="i would give this one free with every purchase!" src="shop.png" width="48%">
 			<img src="s1.jpg" width="100%">
 		</center>
 
