added a spreadsheet page to gaming log

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -46,13 +46,15 @@
 	<div id="iframepc">
 		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
-		<p>these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! i grew up playing video games so yeah i have quite a history with them.
+		<p>sharing my thoughts, progress, and screenshots of video games i've played!</p>
+		<p><b>subpages:</b> <a href="spreadsheet.html">spreadsheet</a> / <s>consoles</s></p>
 		<p>spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>31.oct.24: minor changes around info.html + did a <a href="spreadsheet.html">spreadsheet</a> page of my gaming log!
 			<li>27.oct.24: log: <a href="style-savvy-styling-star/">style savvy styling star</a></li>
 			<li>13.oct.24: log: <a href="splatoon-2/index.html">splatoon 2</a> + <a href="pikmin-4/index.html">pikmin 4</a></li>
 			<li>02.oct.24: log: <a href="fortnite/index.html">fortnite</a> + <a href="splatoon-2/index.html">splatoon 2</a></li>
@@ -63,9 +65,12 @@
 			<li>24.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
 		</div>
 
-		<h2>pages / links</h2>
-		<p><a title="a more comprehensive log of eveything i've ever played" href="https://docs.google.com/spreadsheets/d/1ojh_cduLjpozKTJ1udhq9QNX5xlpGwMe2fLLkxaB4C4/edit?usp=sharing" class="outlink" target="_blank">video games spreadsheet</a></p>
-		<p>feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a> but do leave me a message as to who you are!</p>
+		<h2>links</h2>
+		<p>feel free to add me on...
+			<br>
+			<a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a> / <b>3DS (pretendo):</b> 5427-1045-8513
+		</p>
+		<p><b>do leave me a message as to who you are though!</b> i usually don't accept friend request unless i know where they came from.</p>
 
 
 		<h3>credit</h3>
