revived playlist page

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -45,6 +45,7 @@
    <h4>mini-pages</h4>
    <a href="info.html" target="iframe_a">info</a>
    <a href="featured.html" target="iframe_a">featured music</a>
+   <a href="playlists.html" target="iframe_a">playlists</a>
    <a href="listening-log/index.html" target="iframe_a">listening logs</a>
    <a href="kpop-producers.html" target="iframe_a">fav kpop producers</a>
    <a href="recaps/index.html" target="iframe_a">yearly recaps</a>
@@ -104,6 +105,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>01.nov.24</b> - revived my <a href="playlists.html" target="iframe_a">playlists</a> mini page</p>
    <p><b>22.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#4">crystal castles</a> + <a href="listening-log/2024/fall.html#5">MG ultra</a></p>
    <p><b>19.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#3">imaginal disk</a> + new featured song and album</p>
    <p><b>05.oct.24</b> - debuting fall's listening log with tripleS' <a href="listening-log/2024/fall.html#2">assemble24</a></p>
