--- a/doqmeat/music/playlists.html
+++ b/doqmeat/music/playlists.html
@@ -18,37 +18,31 @@
 </head>
 
 <style>
-	[align] {
-		margin-left: 10px;
-		margin-right: 10px;
-	}
-
 	h4 {
 		text-align: left;
 	}
-
 </style>
 
 <body>
 	<div id="frame">
 		<h2>playlists</h2>
-		<center><small>it's in my to-do list to make youtube playlist for each of these playlists bc man. does spotify sucks.</small></center>
-		<h3 class="title">personal</h3>
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0h2yJhCJMyDMl8weg5X5bm?utm_source=generator" width="40%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" align="left"></iframe>
+		<h3 id="personal" class="title">personal</h3>
+		<p>this is my main spotify playlist! it has every single song that i love to this date. i made this playlist during 2016 and its really fun to see how my music taste has evolved throughout the years by looking at this playlist. its kinda like a memory box of sorts.</p>
 
-		<p>this is my main spotify playlist! it has every single song that i love to this date. i made this playlist during 2016 and its really fun to see how my music taste has evolved throughout the years by looking at this playlist. its kinda like a memory box of sorts. i need to be free from the shackles of spotify but this playlist man &lt;3</p>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0h2yJhCJMyDMl8weg5X5bm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4YjpbteyZyB8qytBOCpDYM?utm_source=generator" width="40%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" align="right"></iframe>
 		<p>this one is for songs that make me feel things. mostly songs that make be hmmmm like <img src="/!g/pix/emote1crying.gif"> but you know, sometimes i am having the worst day ever or i am in a horrible mood, and i put on this playlist and i just get a little bit of relief.</p>
 
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3fowFbayGHBD49MrDOLMBT?utm_source=generator" width="40%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" align="left"></iframe>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4YjpbteyZyB8qytBOCpDYM?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
 		<p>my sleeping playlist.... i love listening to music while i sleep. mostly soundtracks or ambient songs</p>
 
-		<h3 class="title">genres / subgenres favs</h3>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3fowFbayGHBD49MrDOLMBT?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+		<h3 id="genres" class="title">genre favs</h3>
 		<p>there's a bunch of different genres that i like so i thought it would be nice to put them all in playlist showcasing my favorite ones :3</p>
 		<h4>kpop</h4>
 		<p>basically a little bit of everything as kpop is basically a mix and match of many many genres but at least for my taste, i really enjoy the electronic, dance, and house inspired songs.</p>
-		<p><i>highlights:</i> rollercoaster - txt <img src="/!g/pix/starpink.gif"> secret tape - sunmi <img src="/!g/pix/starpink.gif"> neon - yukika <img src="/!g/pix/starpink.gif"> drunk dazed - enhypen <img src="/!g/pix/starpink.gif"> stone heart - taemin 2 <img src="/!g/pix/starpink.gif"> fast - superm</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0sJwG0RCKuYtYVHb4dnkQP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<details>
 			<summary>youtube playlist</summary>
@@ -57,57 +51,64 @@
 		<h4>drum n bass / breakbeat</h4>
 
 		<p>i NEED to get more into DNB i really love this genre a lot so if anyone has some recs pls let me know!</p>
-		<p><i>highlights:</i> lost &amp; found - siinamota <img src="/!g/pix/starpink.gif"> dorothy - sulli <img src="/!g/pix/starpink.gif"> habitual crush - c418 <img src="/!g/pix/starpink.gif"> break it off - pinkpantheress</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6YfGtxhuY1O8VLNyKhjIG5?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 		<h4>soundtracks</h4>
 
 		<p>i love me some soundtracks. i really enjoy listening to soundtracks.</p>
-		<p><i>highlights:</i> asgore - toby fox <img src="/!g/pix/starpink.gif"> let mom sleep - hideki naganuma <img src="/!g/pix/starpink.gif"> serenity - capcom sound team <img src="/!g/pix/starpink.gif"> where are you?! - 2 mello <img src="/!g/pix/starpink.gif"> cyber space 2-1:slice &amp; sway - tomoya ohtani <img src="/!g/pix/starpink.gif"> milkyway (explore) - ben prunty</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4Lo5ZrUEVeDvqd1qQhL3sk?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>korean indie</h4>
 		<p>disclaimer: not exactly a genre, but so much cool stuff in here. one of my fav playlists!! if anyone wants to explore more of the indie music scene of korea, i really recommend checking out <a href="https://www.koreanindie.com" target="_blank">koreanindie.com</a>! that website has helped me discover a ton of amazing korean artists outside of kpop</p>
-		<p><i>highlights:</i> a joke - TRPP <img src="/!g/pix/starpink.gif"> expose - bomul <img src="/!g/pix/starpink.gif"> small death - meaningful stone <img src="/!g/pix/starpink.gif"> dazed - aseul</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5HBPxkrb0K5quO1EwEsli2?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>shoegaze / dreampop</h4>
 		<p>LOVE <img src="/!g/pix/heart4.png"> but LOVEEE shoegaze and dreampop so much. i can't even tell you which one of the two (<mark>they have their key differences but i still prefer to have them in the same playlist.</mark> please understand.) i prefer the most. sometimes i'm in the mood to just fill my head with those fuzzy guitar sounds at full volume and sometimes i just wanna lie down and listen to some relaxing dreampop sounds. honestly i just let spotify's shuffle system decide my fate</p>
-		<p><i>highlights:</i> PPP - beach house <img src="/!g/pix/starpink.gif"> ghost - kinoue64 <img src="/!g/pix/starpink.gif"> dodgy - TRPP <img src="/!g/pix/starpink.gif"> error - plastic girl in closet</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/77F1F3tzFlJo5PxoJpRW8r?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>jrock</h4>
 		<p>i need to add more stuff to this one also feel free to send me more jrock stuff</p>
-		<p><i>highlights:</i> 錠剤 - tooboe <img src="/!g/pix/starpink.gif"> kick back - kenshi yonezu <img src="/!g/pix/starpink.gif"> 千客万来 - daoko, miyavi <img src="/!g/pix/starpink.gif"> <a href="https://youtu.be/6OC92oxs4gA" target="_blank">残機</a> - zutomayo</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/42y8GVNWu5Hcmw12Ccj4iI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>house (kpop edition)</h4>
-		<p>these type of songs are my favorites when it comes to kpop. i really enjoy these future house / deep house / 2-step beats. and need to search more music in these genres outside of kpop. but for now this will do</p>
-		<p><i>highlights:</i> sun or suck - woodz <img src="/!g/pix/starpink.gif"> 2 fast - superm <img src="/!g/pix/starpink.gif"> runaway - ONF <img src="/!g/pix/starpink.gif"> shift - shinee</p>
+		<p>these type of songs are my favorites when it comes to kpop. i really enjoy these future house / deep house / 2-step beats. and need to search more music in these genres outside of kpop. but for now this will do.</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0zRdSEQD25ySCigDlW7gy8?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>jpop</h4>
 		<p>this isn't strictly jpop, but its mostly jpop.</p>
-		<p><i>highlights:</i> polygon wave - perfume <img src="/!g/pix/starpink.gif"> after pain - mu (milgram)</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1FN0eUfCMaawj9sPwXg60A?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>electronic</h4>
 		<p>yes. really. vibes are everywhere in here given how broad electronic music is... but i quite like the chaos of this one</p>
-		<p><i>highlights:</i> <a href="https://youtu.be/Ydpep4P-LzQ" target="_blank">showdown</a> - F.O.O.L. <img src="/!g/pix/starpink.gif"> worries - kirara <img src="/!g/pix/starpink.gif"> 7villaz - drippin <img src="/!g/pix/starpink.gif"> russian - caravan palace <img src="/!g/pix/starpink.gif"> heartbreakers - savant</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7tIn2EkIq46O09E0IQPVtK?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>vocaloid</h4>
 		<p>one of my fav playlists. i might make a page talking about The Vocaloid Songs that really solidified my interest in the "genre". maybe in the future. cover img is by my friend <a href="https://twitter.com/sdfhgg_" target="_blank">@sdfhgg_</a> on twitter!</p>
-		<p><i>highlights:</i> sky fish - siinamota <img src="/!g/pix/starpink.gif"> corruption - parsley onuma <img src="/!g/pix/starpink.gif"> dogdog - abu-se-ken <img src="/!g/pix/starpink.gif"> charles - balloon <img src="/!g/pix/starpink.gif"> always in a dream - kinoue64 <img src="/!g/pix/starpink.gif"> マトリョシカ (matryoshka) - hachi</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6OlN4Gjxcrhzd8h61yyRjc?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h4>indie</h4>
-		<p>classics of my high school era</p>
-		<p><i>highlights:</i> sky fish - siinamota <img src="/!g/pix/starpink.gif"> soft shock - yeah yeah yeahs <img src="/!g/pix/starpink.gif"> washing machine heart - mitski <img src="/!g/pix/starpink.gif"> lost it to trying - son lux <img src="/!g/pix/starpink.gif"> i love you so - the walters</p>
+		<p>classics of my high school era mostly.</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0X23J9s7o8uI9rOjxjljeL?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<h3>other</h3>
+		<h4>instrumentals</h4>
+		<p>i have such a soft spot for instrumentals oh my lord... these are my favorites. i'd listen to any song with a good beat.</p>
+		<iframe width="100%" height="215" src="https://www.youtube-nocookie.com/embed/videoseries?si=-zDghyYMFePIztat&amp;list=PLJJj3iCewWn0Ja8x25MldQJ6Pyoz3wd_9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-		<h3 class="title">by year</h3>
-		<p>every song ive ever heard and liked on that year <img src="/!g/pix/catdance1.gif"> i love making these playlists. yet another way of seeing the evolution of what i listen to</p>
+		<h4>songs i can't find anywhere</h4>
+		<p>also includes some cool covers and remixes.</p>
+		<iframe width="100%" height="215" src="https://www.youtube-nocookie.com/embed/videoseries?si=rm4lV4-wbzzkT6al&amp;list=PLJJj3iCewWn1Lh3oiO9jHhst0xuVsF5IA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+		<h4>albums / mixes</h4>
+		<p>same as above but with albums and cool mixes ppl do</p>
+		<iframe width="100%" height="215" src="https://www.youtube-nocookie.com/embed/videoseries?si=NXMZN_mmQLeYNBTn&amp;list=PLJJj3iCewWn1nmGr1nqIOi-8-9EP5iKLG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+		<h4>gasp...</h4>
+		<p>collecting songs that either start or end with gasps or moans bc i find them interesting.</p>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5tHqK8nfM6v0wBtAxBYk4n?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+		<h3 id="by-year" class="title">by year</h3>
+		<p>every song ive ever heard and liked on that year <img src="/!g/pix/catdance1.gif"> i love making these playlists. yet another way of seeing the evolution of what i listen to.</p>
 		<details>
 			<summary>yearly playlists</summary>
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/32adOTbJqRHAahdT4rYtj2?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3EF2pSqdNpdYbtkGLpeye2?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1fP7Cz5XaJzzbBGqqQsxgc?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1JpgdB77V1znBAa0awePUD?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0Zd8wTVJZZ6VWL31sQDWRm?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0F04z5cdvZ3PoaBOzrXmCD?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/36RQLIRX61EhatIf8BycdU?utm_source=generator" width="49%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		</details>
 
@@ -115,7 +116,7 @@
 	</div>
 
 	<footer>
-		last updated: 19.oct.23 <br>
+		last updated: 31.oct.24 <br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
 </body>
