--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -29,9 +29,9 @@
 
 		<p>i wanted to have a space where i can talk a little bit about the stuff i like to listen to while also showcasing it as well.</p>
 
-		<p>my headphones are the infamous <i>razer kraken kitty headset</i> <small>they are honestly great tbh...</small> and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a>! <small><a title="img of music player" href="https://doqmeat.com/microblog/!g/240710-musicplayer.jpg" target="_blank">look how cute...</a></small></p>
+		<p>my desktop headphones are the infamous <i>razer kraken kitty headset</i> <small>they are the best sounding headphones i've ever had tbh</small>, when i'm on the go i use my <i>JBL tune 720bt</i> which are sooo nice to wear and they sound great too! and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a>! <small><a title="img of music player" href="https://doqmeat.com/microblog/!g/240710-musicplayer.jpg" target="_blank">look how cute...</a></small></p>
 
-		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a>. if not, i'll get it digitally.</p>
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank" class="outlink">this</a> on my phone :) if i enjoy an album or EP A LOT i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a>. if not, i'll get it digitally.</p>
 
 		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> or my <a href="https://rateyourmusic.com/recommend/?rece=doqmeat" target="_blank" class="outlink">rate your music</a> ! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
