--- a/doqmeat/notebook/sitely/info.html
+++ b/doqmeat/notebook/sitely/info.html
@@ -23,17 +23,11 @@
 
 		<h1>tools n info</h1>
 
-		<p>if you wanna be nosy the perfect page for you.</p>
+		<p>if you wanna be nosy this is the perfect page for you.</p>
 
 		<h2>site</h2>
 		<p>site has been live since 11.apr.23 under <b>doqmeat.neocities.org</b>. under <mark>doqmeat.com</mark> since 24.mar.24</p>
-		<li><b>coding editor</b>: <a href="https://brackets.io" target="_blank">brackets.io</a> is by far my favorite! sometimes use <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a> too. extentions i recommend for brackets:</mark></li>
-		<ul>
-			<li>"Beautify" - makes code pretty and not so messy, organizes it.</li>
-			<li>"Alice - Spell Checking" and alongside this "Alice Dictionaries"</li>
-			<li>"Brackets Git"</li>
-			<li>for UI improvements: "custom work"</li>
-		</ul>
+		<li><b>coding editor</b>: <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a></li>
 		<li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
 		<li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
 
