added switch friend code

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -68,7 +68,7 @@
 		<h2>links</h2>
 		<p>feel free to add me on...
 			<br>
-			<a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a> / <b>3DS (pretendo):</b> 5427-1045-8513
+			<a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a> / <b>3DS (pretendo):</b> 5427-1045-8513 / <b>switch:</b> 3336-0516-7511
 		</p>
 		<p><b>do leave me a message as to who you are though!</b> i usually don't accept friend request unless i know where they came from.</p>
 
